# mic-chat

./: .gitmodules  CMakeLists.txt  main.cpp
src/: player.cpp  rakClient.cpp  recorder.cpp  xinput.cpp
src/include/: player.h  rakClient.h  recorder.h  xinput.h
